# opengl-engine-udemy-course

./: .gitattributes  .gitignore  CMakeLists.txt
assets/material/: brick.mat  suzanne.mat
assets/model/service_pistol/: service_pistol.gltf
assets/model/sten_gunmachine_carbine/: license.txt  scene.gltf
assets/shader/: default.frag.glsl  default.vert.glsl
code/: game.cpp  game.h  main.cpp  test-object.cpp  test-object.h
engine/: CMakeLists.txt
engine/code/engine/: CMakeLists.txt  application.h  base.h  common.h  engine.cpp  engine.h  input-manager.cpp  input-manager.h
engine/code/engine/graphics/: buffer.cpp  buffer.h  graphics-api.cpp  graphics-api.h  shader-program.cpp  shader-program.h  texture.cpp  texture.h  vertex-layout.h
engine/code/engine/io/: filesystem.cpp  filesystem.h
engine/code/engine/render/: material.cpp  material.h  mesh.cpp  mesh.h  render-queue.cpp  render-queue.h
engine/code/engine/scene/: component.cpp  component.h  game-object.cpp  game-object.h  scene.cpp  scene.h
engine/code/engine/scene/components/: animation-component.cpp  animation-component.h  camera-component.cpp  camera-component.h  light-component.cpp  light-component.h  mesh-component.cpp  mesh-component.h  player-controller-component.cpp  player-controller-component.h
